-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8, 6.9
-
None
-
d407ee79c (dev), 1a91a1bf7 (6.9), d7b94f824 (6.8), fcbfaf8dd (dev), 8441a518a (6.9), f6db61eb8 (6.8)
The ExtendedSceneEnvironment isn't really primed for XR usage, but it should at least function. The ExtendedSceneEnvironment did initially get ported to support multiview, but at least the way it's used in the xr_freeformteleportation example is causing issue where the generated shaders seems to be wrong.
- relates to
-
QTBUG-130962 View3D inside XrItem's contentItem is not rendered
-
- Closed
-
| For Gerrit Dashboard: QTBUG-132811 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 617226,2 | XR: Disable multiview in the xr_freeformteleportation example | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 617302,2 | XR: Disable multiview in the xr_freeformteleportation example | 6.9 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 617414,2 | XR: Disable multiview in the xr_freeformteleportation example | 6.8 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 617463,5 | XR: Fix issue with effects and multiview | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 619474,2 | XR: Fix issue with effects and multiview | 6.9 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 619485,3 | XR: Fix issue with effects and multiview | 6.8 | qt/qtquick3d | Status: MERGED | +2 | 0 |