src/runtimerender/graphobjects/qssgrenderlayer_p.h
@@ -49,6 +49,12 @@ struct Q_QUICK3DRUNTIMERENDER_EXPORT QSSGRenderLayer : public QSSGRenderNode
         ProgressiveAA
     };
 
+    enum class TAAMode : quint8
+    {
+        Off,
+        On
+    };
+
     enum class AAQuality : quint8
     {
         Normal = 2,
@@ -163,9 +169,8 @@ struct Q_QUICK3DRUNTIMERENDER_EXPORT QSSGRenderLayer : public QSSGRenderNode
 
     QSSGRenderImage *skyBoxCubeMap = nullptr;
 
-    bool temporalAAEnabled;
+    TAAMode temporalAAMode { TAAMode::Off };
     float temporalAAStrength;
-    bool ssaaEnabled;
     float ssaaMultiplier;
     bool specularAAEnabled;
     OITMethod oitMethod;
@@ -254,6 +259,25 @@ struct Q_QUICK3DRUNTIMERENDER_EXPORT QSSGRenderLayer : public QSSGRenderNode
     void setImportScene(QSSGRenderNode &rootNode);
     void removeImportScene(QSSGRenderNode &rootNode);
 
+    [[nodiscard]] bool isMsaaEnabled() const { return antialiasingMode == AAMode::MSAA; }
+    [[nodiscard]] bool isSsaaEnabled() const { return antialiasingMode == AAMode::SSAA; }
+    [[nodiscard]] bool isProgressiveAAEnabled() const { return antialiasingMode == AAMode::ProgressiveAA; }
+    // NOTE: Temporal AA is not enabled when MSAA is enabled.
+    [[nodiscard]] bool isTemporalAAEnabled() const { return (temporalAAMode == TAAMode::On) && !isMsaaEnabled(); }
+
+    static constexpr float ssaaMultiplierForQuality(QSSGRenderLayer::AAQuality quality)
+    {
+        switch (quality) {
+        case QSSGRenderLayer::AAQuality::Normal:
+            return 1.2f;
+        case QSSGRenderLayer::AAQuality::High:
+            return 1.5f;
+        case QSSGRenderLayer::AAQuality::VeryHigh:
+            return 2.0f;
+        }
+
+        return 1.5f; // QSSGRenderLayer::AAQuality::High
+    }
 };
 QT_END_NAMESPACE
 
